--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gestion des Projets</title>
+    <title>Gestionnaire des Projets</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,7 +30,8 @@
     >
       <div class="container">
         <!-- Brand avec Icône -->
-        <a class="navbar-brand fw-bolder d-flex align-items-center" href="/">
+        <a class="navbar-brand fw-bolder d-flex align-items-center" title=
+          'Gestionnaire des Projets"  href="/">
           <i class="bi bi-stack me-2 fs-3">Projector</i>
 
           <!-- <img src="{{ url_for('static', filename='logo/logo_1.png') }}" 
