Fix conditional check for project state

--- a/templates/project_detail.html
+++ b/templates/project_detail.html
@@ -166,7 +166,7 @@
                             value="À faire"
                             {%
                             if
-                            t.etat=""
+                            t.etat==""
                             ="À faire"
                             %}selected{%
                             endif
